# epi-model-reu

./: LICENSE  README.md
code/: 20200702_ngl_demo.ipynb  20200706_align_demo.ipynb  Dockerfile  Dockerfile.jhub  Figure1_StackedBarplot.ipynb  Makefile  aln_from_prop_files.ipynb  matplotlib.html  pyproject.toml  requirements-jhub.txt
code/clustalo_sbatch/: 20200706_clustalo_align.sbatch  README.md  clustalo_align.slurm
code/descriptive_stats_demo/: Statistics.ipynb  eggNOG_alignment_metadata.ipynb  iris_example.ipynb  matplotlib.ipynb
code/jhub/: Dockerfile.jhub  requirements-jhub.txt
code/seq_sim_demo/: 20200706_seq_sim.ipynb  20200706_seq_sim_cat.ipynb.url  20200713_seq_sim_chicken.ipynb  20200713_seq_sim_cow.ipynb  20200713_seq_sim_dog.ipynb  20200713_seq_sim_horse.ipynb  20200713_seq_sim_mouse.ipynb  20200723_seq_sim.ipynb  Ty's Playbook.ipynb
code/struc_sim_demo/: 20200702_ngl_demo.ipynb  20200702_pt1.ipynb
data/: amino_acid_properties.csv
descriptive_stats_demo/: Descriptive_Alignment_Stats.ipynb  KOG3627.fa  KOG3627_extended_members.txt  README.md  Sandbox.ipynb  eggNOG_alignment_metadata.ipynb  requirements.txt
literature/: Abstract.docx  Abstract_20200623_eho_edits.docx  COVID-19
mentor/: 20200626_reu_timeline.md  20200703_mentoring_timeline.md
my_directory/: Abstract.docx
notes/: 20200625_reu_mentoring.md  20200724_mentoring_notes.md  Python.Methods_Functions.xlsx
science_communication/: Abstract (3).docx  Abstract (3)_JA Comments.docx  REU_Paper_Draft_kp_edits (1).docx  REU_Paper_Draft_kp_edits.docx  REU_Paper_Draft_kp_edits_20200804.docx  (+1 more)
(+16 files in other folders)
