[tool.poetry]
name = "epi-model-jupyter"
version = "0.1.0"
description = ""
authors = ["Ethan Ho <eho@tacc.utexas.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
biopython = "^1.77"
numpy = "^1.19.0"
scipy = "^1.5.1"
matplotlib = "^3.2.2"
pandas = "^1.0.5"
jupyter = "^1.0.0"
ipykernel = "^5.3.0"
poetry = "^1.0.9"
plotly = "^4.8.2"
pytest = "^5.4.3"
pyyaml = "^5.3.1"
xarray = "^0.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
